# MiniDAWLab

./: .gitignore  CMakeLists.txt  CMakePresets.json  PROJECT_BRIEF.md  README.md
.cursor/skills/mini-daw-constrained-implementer/: SKILL.md
docs/: ARCHITECTURE_PRINCIPLES.md  IMPLEMENTATION_GUIDE.md  PHASE_PLAN.md  VALIDATION_CHECKLIST.md
installer/: MiniDAWLab.iss  README.md
scripts/: build-windows.ps1  package-windows.ps1
src/: Main.cpp
src/audio/: AudioDeviceInfo.cpp  AudioDeviceInfo.h  LatencySettingsStore.cpp  LatencySettingsStore.h
src/domain/: AudioClip.cpp  AudioClip.h  PlacedClip.cpp  PlacedClip.h  Session.cpp  Session.h  SessionHistory.cpp  SessionHistory.h  SessionSnapshot.cpp  SessionSnapshot.h  Track.cpp  Track.h
src/engine/: CountInClickOutput.cpp  CountInClickOutput.h  PlaybackEngine.cpp  PlaybackEngine.h  RecorderService.cpp  RecorderService.h
src/io/: AudioFileLoader.cpp  AudioFileLoader.h  MonoWavFileWriter.cpp  MonoWavFileWriter.h  ProjectAudioImport.cpp  ProjectAudioImport.h  ProjectFile.cpp  ProjectFile.h
src/plugins/: InsertSlotId.h  PluginDiscovery.cpp  PluginDiscovery.h  PluginEditorWindows.cpp  PluginEditorWindows.h  PluginInsertHost.cpp  PluginInsertHost.h  PluginTrackSlot.h
src/transport/: Transport.cpp  Transport.h
src/ui/: ClipWaveformView.cpp  ClipWaveformView.h  ForbiddenCursor.cpp  ForbiddenCursor.h  InspectorView.cpp  InspectorView.h  LatencySettingsView.cpp  LatencySettingsView.h  TimelineRulerView.cpp  TimelineRulerView.h  TimelineViewportModel.cpp  TimelineViewportModel.h  TrackHeaderView.cpp  TrackHeaderView.h  TrackLanesView.cpp  TrackLanesView.h
status/: CRASH_NOTES.md  DECISION_LOG.md  PHASE_1_COMPLETION_NOTE.md
